RESOLVED FIXED103217
REGRESSION(134142): ASSERT(!m_size.isZero()) hits in CoordinatedBackingStore::paintToTextureMapper().
https://bugs.webkit.org/show_bug.cgi?id=103217
Summary REGRESSION(134142): ASSERT(!m_size.isZero()) hits in CoordinatedBackingStore:...
Dongseong Hwang
Reported 2012-11-25 23:27:37 PST
It is possible for CoordinatedBackingStore of directed composited image to not have tiles, because CoordinatedImageBacking does not create tiles when the image is invisible.
Attachments
Patch (2.39 KB, patch)
2012-11-25 23:29 PST, Dongseong Hwang
no flags
Dongseong Hwang
Comment 1 2012-11-25 23:29:08 PST
Dongseong Hwang
Comment 2 2012-11-25 23:30:55 PST
I feel sorry for many mistakes I made. I wish to correct all today.
Chris Dumez
Comment 3 2012-11-25 23:33:49 PST
Dongseong Hwang
Comment 4 2012-11-25 23:51:37 PST
(In reply to comment #3) > FYI, this seems related as well: > http://build.webkit.org/results/EFL%20Linux%2064-bit%20Debug%20WK2/r135679%20%286335%29/compositing/overflow/content-loses-scrollbars-crash-log.txt > > I hope this patch fixes it as well. The crash is fixing in Bug 103171. I'm sorry. I hope you don't encounter the crash tomorrow.
WebKit Review Bot
Comment 5 2012-11-26 02:42:11 PST
Comment on attachment 175932 [details] Patch Clearing flags on attachment: 175932 Committed r135697: <http://trac.webkit.org/changeset/135697>
WebKit Review Bot
Comment 6 2012-11-26 02:42:15 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.