REGRESSION(134142): ASSERT(!m_size.isZero()) hits in CoordinatedBackingStore::paintToTextureMapper(). https://bugs.webkit.org/show_bug.cgi?id=103217

Patch by Huang Dongsung <luxtella@company100.net> on 2012-11-26
Reviewed by Noam Rosenthal.

It is possible for CoordinatedBackingStore of directed composited image to not
have tiles, because CoordinatedImageBacking does not create tiles when the image
is invisible.

* UIProcess/CoordinatedGraphics/CoordinatedBackingStore.cpp:
(WebKit::CoordinatedBackingStore::paintToTextureMapper):

git-svn-id: svn://svn.chromium.org/blink/trunk@135697 bbb929c8-8fbe-4397-9dbb-9b2b20218538