third_party/WebKit/Source/WebKit2/UIProcess/CoordinatedGraphics/CoordinatedBackingStore.cpp
@@ -141,6 +141,10 @@ void CoordinatedBackingStore::paintTilesToTextureMapper(Vector<TextureMapperTile
 
 void CoordinatedBackingStore::paintToTextureMapper(TextureMapper* textureMapper, const FloatRect& targetRect, const TransformationMatrix& transform, float opacity, BitmapTexture* mask)
 {
+    if (m_tiles.isEmpty())
+        return;
+    ASSERT(!m_size.isZero());
+
     Vector<TextureMapperTile*> tilesToPaint;
     Vector<TextureMapperTile*> previousTilesToPaint;
 
@@ -166,7 +170,6 @@ void CoordinatedBackingStore::paintToTextureMapper(TextureMapper* textureMapper,
         previousTilesToPaint.append(&tile);
     }
 
-    ASSERT(!m_size.isZero());
     FloatRect rectOnContents(FloatPoint::zero(), m_size);
     TransformationMatrix adjustedTransform = transform;
     // targetRect is on the contents coordinate system, so we must compare two rects on the contents coordinate system.
